kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-service-servis
spec:
  selector:
    app: core-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5010
  type: ClusterIP
