kubernetes/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: hypeproject.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-service-servis
                port:
                  number: 80
